# python-project-49

./: .gitignore  Makefile  README.md  ask  pyproject.toml  setup.cfg
Games/: cli.py
Games/scripts/: brain_games.py
brain_games/: cli.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
games/scripts/: brain_progression.py
